<resources>
    <string name="app_name">RSS</string>
    <string name="ci">CI</string>
    <string name="nombre">Nombre</string>
    <string name="cargo">Cargo</string>
    <string name="btnGuardar">Guardar</string>
    <string name="btnBuscar">Buscar</string>
    <string name="btnActualizar">Update</string>
    <string name="btnBorrar">Borrar</string>
    <string name="btnVer">Detalles</string>
    <string name="validate">Este campo no puede estar vacío!</string>
    <string name="ver">Ver Registro</string>
    <string name="title">Insertar nuevo Trabajador</string>
    <string name="dialog_title">Alerta!</string>
    <string name="msg_dialog">Desea borrar el trabajador con CI:</string>
    <string name="msg_editar">Editado correctamente</string>
    <string name="ci_existe">Este CI no existe</string>
    <string name="error">ERROR</string>
    <string name="delete">Borrado CI:</string>
    <string name="msg_buscar">ID no encontrado</string>
    <string name="msg_guardar">Se guardó el dato:</string>
    <string name="id_existe">Ya existe este ID!</string>
</resources>
