<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLinear"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.android.rss.sqlite.DataBaseActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etCI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ci"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombre"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputTelef"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etCargo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cargo"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/btnGuardar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@android:color/holo_green_light"
                android:text="@string/btnGuardar"
                android:textAllCaps="false"
                tools:ignore="ButtonStyle,UnusedAttribute" />

            <Button
                android:id="@+id/btnBuscar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@android:color/holo_orange_light"
                android:text="@string/btnBuscar"
                android:textAllCaps="false"
                tools:ignore="ButtonStyle,UnusedAttribute" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@android:color/holo_blue_bright"
                android:text="@string/btnActualizar"
                android:textAllCaps="false"
                tools:ignore="ButtonStyle,UnusedAttribute" />

            <Button
                android:id="@+id/btnBorrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@android:color/holo_red_light"
                android:text="@string/btnBorrar"
                android:textAllCaps="false"
                tools:ignore="ButtonStyle,UnusedAttribute" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>
